2005-03-04  Jacqueline Pitter <jacqueline.pitter@hp.com>

        * printer/: Added HP-DeskJet_6600.xml

2005-03-04  Till Kamppeter <till.kamppeter@gmx.net>

	* printer/Gestetner-10512_PS.xml, printer/Gestetner-2212_PS.xml,
	  printer/Gestetner-2712_PS.xml, printer/Gestetner-3212_PS.xml,
	  printer/Gestetner-3502_PS.xml, printer/Gestetner-4502_PS.xml,
	  printer/Gestetner-6002_PS.xml, printer/Gestetner-7502_PS.xml,
	  printer/Gestetner-9002_PS.xml, printer/Gestetner-C7010_PS.xml,
	  printer/Gestetner-C7425dn_PS.xml,
	  printer/Gestetner-DSc224_PS.xml,
	  printer/Gestetner-DSc232_PS.xml, printer/Gestetner-DSc38_PS.xml,
	  printer/Gestetner-DSc524_PS.xml,
	  printer/Gestetner-DSc532_PS.xml,
	  printer/Gestetner-DSm615_PS.xml,
	  printer/Gestetner-DSm618d_PS.xml,
	  printer/Gestetner-DSm618_PS.xml,
	  printer/Gestetner-DSm651_PS.xml,
	  printer/Gestetner-DSm660_PS.xml,
	  printer/Gestetner-DSm675_PS.xml,
	  printer/Gestetner-F9199_9199nf_PS.xml,
	  printer/Gestetner-P7026n_PS.xml, printer/Gestetner-P7026_PS.xml,
	  printer/Gestetner-P7032_PS.xml, printer/Gestetner-P7126n_PS.xml,
	  printer/Gestetner-P7126_PS.xml, printer/Gestetner-P7145_PS.xml,
	  printer/Infotec-4353_MF_PS.xml, printer/Infotec-4452_MF_PS.xml,
	  printer/Infotec-IP_280_PS.xml, printer/Infotec-IPC1036_PS.xml,
	  printer/Infotec-IPC_2525e_PS.xml,
	  printer/Infotec-IPC_2525_PS.xml, printer/Infotec-IS_2015_PS.xml,
	  printer/Infotec-IS_2018D_PS.xml, printer/Infotec-IS_2018_PS.xml,
	  printer/Infotec-IS2022_PS.xml, printer/Infotec-IS2027_PS.xml,
	  printer/Infotec-IS2032_PS.xml, printer/Infotec-IS_2060_PS.xml,
	  printer/Infotec-IS_2075_PS.xml, printer/Infotec-IS2090_PS.xml,
	  printer/Infotec-IS2105_PS.xml, printer/Infotec-IS_2151_PS.xml,
	  printer/Infotec-IS_2160_PS.xml, printer/Infotec-IS_2175_PS.xml,
	  printer/Infotec-ISC1032_PS.xml, printer/Infotec-ISC824_PS.xml,
	  printer/Lanier-2132_PS.xml, printer/Lanier-2138_PS.xml,
	  printer/Lanier-2145_PS.xml, printer/Lanier-5622_PS.xml,