@@ -24,6 +24,12 @@
     </text>
   </lang>
   <autodetect>
+    <parallel>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>hp LaserJet 2300L</model>
+      <description>Hewlett-Packard LaserJet 2300L</description>
+      <commandset>PJL,MLC,BIDI-ECP,PCLXL,PCL,PJL,POSTSCRIPT</commandset>
+    </parallel>
   </autodetect>
   <functionality>A</functionality>
   <driver>Postscript</driver>
