@@ -1,3 +1,8 @@
+2005-03-09  Tim Waugh <twaugh@redhat.com >
+
+	* printer/HP-LaserJet_2300.xml: Added IEEE 1284 information
+	  (RH bug #150518).
+
 2005-03-04  Jacqueline Pitter <jacqueline.pitter@hp.com>
 
         * printer/: Added HP-DeskJet_6600.xml
